Fixed the alignment in card-styles

--- a/src/app/shared-styles/card-styles.component.css
+++ b/src/app/shared-styles/card-styles.component.css
@@ -1,29 +1,17 @@
-.margin-top{
-    margin-top: 60px;
-    margin-bottom: 60px;
+.display-card {
+    width: 400px;
 }
 
-.card-margin{
-    margin-left: 60px;
-    margin-right: 60px;
-}
-
-.max-card-width{
-    max-width: 500px;
-    min-width: 400px;
-}
-
-.pos-center{
+.card-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px 0 20px 20px;
 }
 
-.certificate-header-image{
+.certificate-header-image {
     background-image: url('../../assets/certificates/UdemyLogo.PNG');
     background-size: cover;
-}
-
-.flex-wrap{
-    display: flex;
-    flex-wrap: wrap;
 }
